# End-to-End-Self-Driving-Car

./: ReadMe.txt
Android Application/APK/: Video Recorder.apk
Android Application/Test/app/src/main/res/values/: strings.xml
Test/app/: build.gradle
Test/app/src/main/: AndroidManifest.xml
Test/gradle/wrapper/: gradle-wrapper.properties
Training, Driving & Visulization/: visualization.py
Training, Driving & Visulization/Real-World Training Code/: Real-Training.py
Training, Driving & Visulization/Simulator Training & Driving Code/: drive.py  model_nvidia.py
Tutorial/: tensorflow安装.docx
Tutorial/FYP-II Tutorial/: 说明.txt
Tutorial/FYP-II Tutorial/数据采集/: 数据采集.docx
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/autolabor_pro1_driver/: CMakeLists.txt
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/autolabor_pro1_driver/src/: autolabor_driver.cpp
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/car_controll/: CMakeLists.txt  package.xml
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/car_controll/launch/: drive.launch  sync.launch
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/car_controll/scripts/: neural_drive.py
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/car_controll/src/: drive.cpp  sync.cpp
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/ps3joy/scripts/: ps3joyfake_node.py
Tutorial/FYP-II Tutorial/数据采集/Driver Packages/usb_cam/launch/: usb_cam-test.launch
Tutorial/FYP-II Tutorial/环境配置/: Keras安装.docx  ROS 环境配置.docx  opencv安装.docx  python环境配置.docx  tensorflow安装.docx  说明.txt
Tutorial/FYP-II Tutorial/自动驾驶/: 自动驾驶.docx
Tutorial/FYP-II Tutorial/训练文档/: Training.py  visualization.py  训练文档.docx
(+4 files in other folders)
