<?xml version="1.0"?>
<package>
  <name>car_controll</name>
  <version>0.1.0</version>
  <description>controll package for Final Year Project II</description>
  <maintainer email="524663104@qq.com">Frank</maintainer>
  <license>No Yet</license>
  <author>Frank</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
